[package]
name = "datboi-server"
description = "The datboi daemon (12-factor; invite/session auth per D30/D68, loopback stays owner)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
argon2.workspace = true
axum.workspace = true
bytes.workspace = true
getrandom.workspace = true
async-trait.workspace = true
# The /v1 contract types the handlers consume and produce (D69).
datboi-api.workspace = true
# ViewDef decode + the audit read models behind /v1 (M5 web API).
datboi-catalog.workspace = true
datboi-core.workspace = true
datboi-exec.workspace = true
# Detector type for the loaded skipper set (App carries it).
datboi-formats.workspace = true
datboi-index.workspace = true
# The upload-ingest job runs the same pipeline `datboi ingest` does.
datboi-ingest.workspace = true
# The p2p seedbox (D97): serve holdings to peers over iroh. Opt-in.
datboi-p2p.workspace = true
datboi-store-fs.workspace = true
dav-server.workspace = true
# Response compression for the text surfaces (JSON, UI assets, DAV XML).
tower-http.workspace = true
futures-core.workspace = true
include_dir.workspace = true
# The blob sniff (D79): libmagic over the embedded nixpkgs magic.mgc
# (build.rs re-exports DATBOI_MAGIC_DB for include_bytes!).
magic.workspace = true
nfsserve.workspace = true
# The /v1 read models query cache.db directly (same SQL family as
# `datboi status`/`datboi audit` — see api.rs).
rusqlite.workspace = true
# nice(19) for the refine worker thread (D71) — safe wrapper, same
# rationale as datboi-index's statfs use.
rustix.workspace = true
# Trait bound only (`json_response<T: Serialize>`); derives stay in
# datboi-api per D69.
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
# D81 daemon logging: this crate emits events; the `datboi serve`
# handler owns the subscriber.
tracing.workspace = true

[dev-dependencies]
# Recomputes the CSP script hash from the embedded dist (web.rs test).
sha2.workspace = true
# stored_zip fixture builder for the ingest integration test.
crc32fast.workspace = true
# deflate_zip fixture: the D71 refine e2e needs a member preflate can
# actually split.
flate2.workspace = true
tempfile.workspace = true
ureq.workspace = true

[lints]
workspace = true
