[package]
name = "datboi-store-fs"
description = "NFS/local filesystem blob store: loose sharded files, tmp/fsync/rename discipline"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blake3.workspace = true
datboi-core.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true

[lints]
workspace = true
