[package]
name = "datboi-store-fs"
description = "NFS/local filesystem blob store: loose sharded files, tmp/fsync/rename discipline"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bao-tree = { version = "0.16.0", default-features = false, features = ["validate"] }
blake3.workspace = true
datboi-core.workspace = true
positioned-io = { version = "0.3", default-features = false }
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true

[features]
# Enables the process-abort injection points in `put_new` and builds the
# `crash-child` test binary. Test-only: never enable in a shipping build.
crash-injection = []

# The child process the crash harness kills. Gated so a default build (and
# `nix flake check`) never produces it; the harness runs under
# `cargo test --features crash-injection`.
[[bin]]
name = "crash-child"
path = "src/bin/crash_child.rs"
required-features = ["crash-injection"]

[lints]
workspace = true
