[package]
name = "datboi-xf-preflate"
description = "Deflate-stream recreation for the datboi:transform@1 world (D53): rebuilds a member's raw deflate bytes bit-exactly from its plaintext plus a framed preflate corrections blob"
version = "0.1.0"
edition = "2024"
authors = ["Chaz Schlarp"]
license = "MIT"
repository = "https://github.com/schlarpc/datboi"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# The recreate path only; the split side runs natively in the analyzer.
# Version pinned exactly: the component hash in recipes is the real pin,
# but an exact requirement keeps rebuilds from silently floating.
preflate-rs = "=0.7.6"

# Guest bindings only for the wasm component; host-native unit tests build
# without them.
[target.'cfg(target_arch = "wasm32")'.dependencies]
datboi-guest-transform = { path = "../datboi-guest-transform" }

[dev-dependencies]
# Test-only deterministic in-process compressor to synthesize deflate
# streams; production streams come from the wild.
miniz_oxide = "0.8"

# Standalone workspace ON PURPOSE (D54): each transform builds against its
# own lockfile so sibling crates can't perturb its bytes through shared
# dependency resolution — component identity must be reproducible from
# this directory alone (plus ../wit and ../datboi-guest-transform).
[workspace]

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }

[profile.release]
# Transforms are content-addressed artifacts: favor small, stable output.
opt-level = "s"
lto = true
strip = true
