[package]
name = "datboi-xf-reference"
description = "Reference transform (byte/word swaps): wasm twin of the swap@1 builtin, exercised by the determinism CI gate"
version = "0.1.0"
edition = "2024"
authors = ["Chaz Schlarp"]
license = "MIT"
repository = "https://github.com/schlarpc/datboi"

[lib]
crate-type = ["cdylib", "rlib"]

# Only the wasm component needs the guest bindings; host-native unit tests
# (run by `nix flake check`) build without them. Default features drag in
# async support (futures) that a pure whole-buffer transform must not have.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wit-bindgen = { version = "0.46", default-features = false, features = ["macros", "realloc"] }

# Standalone workspace ON PURPOSE (D54): each transform builds against its
# own lockfile so sibling crates can't perturb its bytes through shared
# dependency resolution — component identity must be reproducible from
# this directory alone (plus ../wit).
[workspace]

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }

[profile.release]
# Transforms are content-addressed artifacts: favor small, stable output.
opt-level = "s"
lto = true
strip = true
