[package]
name = "datboi"
description = "dat/rom management on content-addressed storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
# streaming re-hash for `view sync --verify`
blake3.workspace = true
clap.workspace = true
datboi-catalog.workspace = true
datboi-core.workspace = true
datboi-exec.workspace = true
# gc guard holder entropy (D72).
getrandom.workspace = true
datboi-formats.workspace = true
datboi-index.workspace = true
datboi-ingest.workspace = true
# `datboi fetch --peer` (D101): the direct-library convenience lane.
datboi-p2p.workspace = true
datboi-server.workspace = true
datboi-store-fs.workspace = true
serde_json.workspace = true
# The D81 subscriber lives in the `serve` handler — the one place a
# daemon starts; client subcommands keep their user-facing stderr.
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
crc32fast.workspace = true
flate2.workspace = true
predicates.workspace = true
tempfile.workspace = true

[lints]
workspace = true
