[package]
name = "xf-ecm"
description = "ECM-style CD sector regeneration for the frozen datboi:transform@2 world: rebuilds raw 2352-byte sectors bit-exactly from stripped data + a run-length layout, regenerating sync/EDC/ECC (ECMA-130)"
version = "0.1.0"
edition = "2024"
authors = ["Chaz Schlarp"]
license = "MIT"
repository = "https://github.com/schlarpc/datboi"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wit-bindgen = { version = "0.46", default-features = false, features = ["macros", "realloc"] }

# Standalone workspace ON PURPOSE (D54): each transform builds against its
# own lockfile so sibling crates can't perturb its bytes through shared
# dependency resolution — component identity must be reproducible from
# this directory alone (plus ../wit).
[workspace]

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }

[profile.release]
# Transforms are content-addressed artifacts: favor small, stable output.
opt-level = "s"
lto = true
strip = true
