[package]
name = "xf-reference"
description = "Reference transform (byte/word swaps): wasm twin of the swap@1 builtin, exercised by the determinism CI gate"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true
